Cleaner markup, switched back to official ubuntu image

--- a/ansible-centos7/Dockerfile
+++ b/ansible-centos7/Dockerfile
@@ -1,10 +1,16 @@
 FROM centos/systemd
 
 ENV USER jenkins
+
+#install necessary packages
 RUN yum install -y epel-release
-RUN yum update -y && yum install -y openssh-server java-1.8.0-openjdk-devel git ansible
-RUN adduser $USER && echo "$USER:$USER"|chpasswd && usermod -aG wheel $USER
+RUN yum update -y && \
+    yum install -y openssh-server java-1.8.0-openjdk-devel git ansible
+RUN adduser $USER && \
+    echo "$USER:$USER"|chpasswd && \
+    usermod -aG wheel $USER
 RUN mkdir /var/run/sshd
 
+#start ssh server
 EXPOSE 22
 CMD    ["/usr/sbin/sshd", "-D"]
