--- a/ansible-ubuntu1604/Dockerfile
+++ b/ansible-ubuntu1604/Dockerfile
@@ -15,11 +15,18 @@ RUN adduser --disabled-password --gecos "" $USER && \
     adduser $USER sudo
 RUN mkdir /var/run/sshd
 
-#copy systemctl replacement
-#https://github.com/gdraheim/docker-systemctl-replacement
-RUN test -d /run/systemd/system || mkdir /run/systemd/system
-RUN apt-get install systemd && apt-mark hold systemd
-COPY docker-systemctl-replacement/files/docker/systemctl.py /usr/bin/systemctl
+#systemd
+ENV container docker
+RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; do [ $i == systemd-tmpfiles-setup.service ] || rm -f $i; done); \
+rm -f /lib/systemd/system/multi-user.target.wants/*;\
+rm -f /etc/systemd/system/*.wants/*;\
+rm -f /lib/systemd/system/local-fs.target.wants/*; \
+rm -f /lib/systemd/system/sockets.target.wants/*udev*; \
+rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
+rm -f /lib/systemd/system/basic.target.wants/*;\
+rm -f /lib/systemd/system/anaconda.target.wants/*;
+VOLUME [ "/sys/fs/cgroup" ]
+CMD ["/usr/sbin/init"]
 
 #start ssh server
 EXPOSE 22
