--- a/ansible-centos7/Dockerfile
+++ b/ansible-centos7/Dockerfile
@@ -5,12 +5,7 @@ ENV USER jenkins
 #install necessary packages
 RUN yum install -y epel-release
 RUN yum update -y && \
-    yum install -y openssh-server java-1.8.0-openjdk-devel git ansible
+    yum install -y java-1.8.0-openjdk-devel git ansible
 RUN adduser $USER && \
     echo "$USER:$USER"|chpasswd && \
     usermod -aG wheel $USER
-RUN mkdir /var/run/sshd
-
-#start ssh server
-EXPOSE 22
-CMD    ["/usr/sbin/sshd", "-D"]
