--- a/ansible-ubuntu1604/Dockerfile
+++ b/ansible-ubuntu1604/Dockerfile
@@ -9,11 +9,7 @@ RUN apt-get update &&\
 RUN apt-get install -y software-properties-common && \
     apt-add-repository ppa:ansible/ansible && \
     apt-get update
-RUN apt-get install -y openssh-server openjdk-8-jdk git ansible
+RUN apt-get install -y openjdk-8-jdk git ansible
 RUN adduser --disabled-password --gecos "" $USER && \
     echo "$USER:$USER"|chpasswd && \
     adduser $USER sudo
-RUN mkdir /var/run/sshd
-
-#start ssh server
-EXPOSE 22
