--- a/ansible-ubuntu1404/Dockerfile
+++ b/ansible-ubuntu1404/Dockerfile
@@ -10,7 +10,10 @@ RUN apt-get install -y software-properties-common && \
     add-apt-repository ppa:openjdk-r/ppa && \
     apt-add-repository ppa:ansible/ansible && \
     apt-get update
-RUN apt-get install -y openjdk-8-jdk git ansible
+RUN apt-get install -y openssh-server openjdk-8-jdk git ansible
 RUN adduser --disabled-password --gecos "" $USER && \
     echo "$USER:$USER"|chpasswd && \
     adduser $USER sudo
+RUN mkdir -p /var/run/sshd
+
+EXPOSE 22
