--- a/ansible-ubuntu1604/Dockerfile
+++ b/ansible-ubuntu1604/Dockerfile
@@ -4,12 +4,15 @@ ENV USER jenkins
 ARG DEBIAN_FRONTEND=noninteractive
 
 #install necessary packages
-RUN apt-get update &&\
+RUN apt-get update && \
     apt-get -y dist-upgrade
 RUN apt-get install -y software-properties-common && \
     apt-add-repository ppa:ansible/ansible && \
     apt-get update
-RUN apt-get install -y openjdk-8-jdk git ansible
+RUN apt-get install -y openssh-server openjdk-8-jdk git ansible
 RUN adduser --disabled-password --gecos "" $USER && \
     echo "$USER:$USER"|chpasswd && \
     adduser $USER sudo
+RUN mkdir -p /var/run/sshd
+
+EXPOSE 22
