Removed not needed ssh server

--- a/ansible-ubuntu1204/Dockerfile
+++ b/ansible-ubuntu1204/Dockerfile
@@ -10,12 +10,7 @@ RUN apt-get install -y python-software-properties && \
     add-apt-repository ppa:openjdk-r/ppa && \
     apt-add-repository ppa:ansible/ansible && \
     apt-get update
-RUN apt-get install -y openssh-server openjdk-8-jdk git ansible
+RUN apt-get install -y openjdk-8-jdk git ansible
 RUN adduser --disabled-password --gecos "" $USER && \
     echo "$USER:$USER"|chpasswd && \
     adduser $USER sudo
-RUN mkdir /var/run/sshd
-
-#start ssh server
-EXPOSE 22
-CMD    ["/usr/sbin/sshd", "-D"]
