Changes JDK to JRE in Ubuntu, removes ppa. Adds Debian 7 & 8

--- a/ansible-ubuntu1404/Dockerfile
+++ b/ansible-ubuntu1404/Dockerfile
@@ -7,10 +7,9 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && \
     apt-get -y dist-upgrade
 RUN apt-get install -y software-properties-common && \
-    add-apt-repository ppa:openjdk-r/ppa && \
     apt-add-repository ppa:ansible/ansible && \
     apt-get update
-RUN apt-get install -y openssh-server openjdk-8-jdk git ansible
+RUN apt-get install -y openssh-server git ansible openjdk-7-jre
 RUN adduser --disabled-password --gecos "" $USER && \
     echo "$USER:$USER"|chpasswd && \
     adduser $USER sudo
